# FLOORPLAN-A-3D

./: main.py  pyproject.toml  requirements.txt
backend/: build_3d.py  floorplan_ai.py  furniture.py  main.py  postprocess.py  pyproject.toml  scene.glb  start_server.bat  test_endpoint.py  utils.py
frontend/: index.html  script.js  style.css
training/: dataset.py  generate_masks.py  model.py  model_unet_small.py  preprocess.py  train.py
