[project]
name = "floorplan-a-3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "python-multipart>=0.0.20",
    "scikit-image>=0.25.2",
    "shapely>=2.1.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "trimesh>=4.10.1",
    "uvicorn>=0.38.0",
]
